# twincat_ads_gui

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: BeckhoffAds.cmake
doc/: ads-client-handover.md
plotting/: plot_logging.py
src/: body_scope.h  graphdisplaywindow.cpp  graphdisplaywindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  topologywidget.cpp  topologywidget.h  twincat_logging_buffer.h  twincat_path_cmd.h
